[dev/inject-style-iframe] fix reverse option for link not showing, fix column not saved

--- a/src/editor/blocks/portfolio-gallery/styles/style.scss
+++ b/src/editor/blocks/portfolio-gallery/styles/style.scss
@@ -17,6 +17,7 @@
                 display: flex;
                 justify-content: space-between;
                 flex-direction: column;
+                overflow: hidden;
                 &:not(:last-child){
                     border-right: 1px solid rgba(255,255,255, .3);
                 }
@@ -24,6 +25,7 @@
                     display: flex;
                     transition: all .5s ease;
                     transform: translateY(100%);
+                    opacity: 0;
                     padding: 10px 20px 10px 20px;
                     a{
                         display: flex;
@@ -61,6 +63,7 @@
                     }
                     .row-link-wrapper{
                         transform: translateY(0);
+                        opacity: 1;
                     }
                 }
             }
